--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <!-- Buttons for colors which player can click and choose from -->
-        <div class="codepeg-container">
+        <div class="colors">
             <button class="colorBtn" id="blue"></button>
             <button class="colorBtn" id="red"></button>
             <button class="colorBtn" id="yellow"></button>
