Add last functions

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
     <main class="mainBoard-grid">
         <h1>MASTERMIND GAME</h1>
         <!-- Winning or Losing message -->
-        <div class="winlose-message">Message will appear here</div>
+        <div class="winlose-message"></div>
 
         <!-- hidden code of colors-->
         <div class="random-code">
