Add more styles

--- a/html/index.html
+++ b/html/index.html
@@ -119,14 +119,13 @@
                
         </div>
         <button class="reset">RESET</button>
-        <p>Mastermind or Master Mind is a code-breaking game.
-            It resembles an earlier pencil and paper game called Bulls and Cows that may date back a century.
-            <strong>How to play:</strong> Pick 4 different colors from the code peg. If the color you chose is right and,
-            in the right position of the row, the key peg turns green in the asigned position. If it's the right color,
-            but in a wrong position, the key peg turns white.
-            Good luck! You have 6 tries! 
-        </p>  
     </main>
-    
+    <p>Mastermind or Master Mind is a code-breaking game.
+        It resembles an earlier pencil and paper game called Bulls and Cows that may date back a century.
+        <strong style="color: red;">How to play:</strong> Pick 4 different colors from the code peg. If the color you chose is right and,
+        in the right position of the row, the key peg turns <strong style="color: green">green</strong> in the asigned position. If it's the right color,
+        but in a wrong position, the key peg turns <strong style="background-color: black; color:white">white</strong>.
+        Good luck! You have 6 tries! 
+    </p>  
 </body>
 </html>
