--- a/html/index.html
+++ b/html/index.html
@@ -122,9 +122,9 @@
     </main>
     <p>Mastermind or Master Mind is a code-breaking game.
         It resembles an earlier pencil and paper game called Bulls and Cows that may date back a century.
-        <strong style="color: red;">How to play:</strong> Pick 4 different colors from the code peg. If the color you chose is right and,
-        in the right position of the row, the key peg turns <strong style="color: green">green</strong> in the asigned position. If it's the right color,
-        but in a wrong position, the key peg turns <strong style="background-color: black; color:white">white</strong>.
+        <span id="howto">How to play:</span> Pick 4 different colors from the code peg. If the color you chose is right and,
+        in the right position of the row, the key peg turns <span id="green">green</span> in the asigned position. If it's the right color,
+        but in a wrong position, the key peg turns <span id="white">white</span>.
         Good luck! You have 6 tries! 
     </p>  
 </body>
